fix: render on mobile

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -31,6 +31,20 @@
   text-align: center;
 }
 
+
+@media only screen and (max-width: 768px) {
+  .cardwrapper {
+    display: block;
+  }
+  .card {
+    margin-top: 10px;
+    min-width: 100%;
+  }
+  .card p {
+    display: none;
+  }
+}
+
 .card:link {
   color: #000;
 }
